# strain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check_mcp.py  docker-compose.yml  pyproject.toml  test_agent.py
.github/workflows/: ci.yml
api/: main.py
backend/frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
docs/: hackathon-remaining-tasks.md  mcp-setup-first-steps.md  po-byo-agent-system-prompt.md  prompt-opinion-hackathon.md
docs/examples/: patient-emotion-context.example.json
emotiscan/: __init__.py  config.py
emotiscan/agents/: __init__.py  analysis_engine.py  data_curator.py  explainer.py  orchestrator.py
emotiscan/data/: __init__.py  dreamer_epochs.py  dreamer_splits.py  dreamer_torch.py
emotiscan/eda/: kaggle_brainwave.py
emotiscan/features/: __init__.py  dreamer_featurize.py  eeg_epoch.py
emotiscan/io/: __init__.py  catalog.py  dreamer_mat.py  emotions_csv.py  fhir.py
emotiscan/models/: __init__.py  classifier.py  dreamer_vad.py  (+1 more)
mcp_server/: __init__.py  server.py
notebooks/: 01_kaggle_eeg_eda.ipynb  Dreamer_Training.ipynb
po-adk-python/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
scripts/: download_data.sh  export_dreamer_epochs.py  pick_demo_epochs.py  run_mcp_sse.sh  run_mcp_stdio.sh  run_mcp_streamable_http.sh  train_baseline.py  train_dreamer_vad.py
strain/: __init__.py  config.py
tests/: test_health.py  test_patient_context.py
(+64 files in other folders)
