[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotiscan"
version = "0.1.0"
description = "EmotiScan v2.0 — EEG emotion / mental-health demo (Kaggle emotions.csv)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "mne>=1.6",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "mcp>=1.2",
  "pydantic>=2.9",
  "joblib>=1.4",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0", "ipykernel>=6.29", "kaggle>=1.6"]

[tool.hatch.build.targets.wheel]
packages = ["emotiscan"]
